Add subgroup logic